@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/mgltools-pyautodock
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Mar 2015; Justin Lecher <jlec@gentoo.org> mgltools-pyautodock-1.5.6.ebuild:
+  sci-chemistry/mgltools-pyautodock: Drop PYTHON_MODNAME and support for
+  python2_6
 
   10 Jun 2013; Justin Lecher <jlec@gentoo.org>
   -mgltools-pyautodock-1.5.4-r1.ebuild, mgltools-pyautodock-1.5.6.ebuild:
@@ -51,4 +55,3 @@
   18 May 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   +mgltools-pyautodock-1.5.4.ebuild, +metadata.xml:
   Initial checkin
-
